fix: corrige overflow horizontal no mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -153,12 +153,14 @@ header {
     flex-direction: column;
     gap: 12px;
     align-items: center;
-    min-width: calc(100vh - 96px);
+    width: 100%;
+    min-height: calc(100vh - 96px);
     padding: 32px 4%;
     padding-top: clamp(0px, 5vw, 32px);
 
     .home-image {
-        width: clamp(100px, 50%, 200px);
+        max-width: 320px;
+        width: 100%;
     }
 
     .home-title {
@@ -195,6 +197,7 @@ header {
     flex-direction: column;
     align-items: center;
     gap: 32px;
+    width: 100%;
     min-height: calc(100vh - 96px);
 
     .tranding-cards {
